DISCOVERYACCESS-4768: fix contrast of red buttons with white text; rmc scan it button should be white to match other scan it button

--- a/app/assets/stylesheets/cornell/_variables.scss
+++ b/app/assets/stylesheets/cornell/_variables.scss
@@ -35,6 +35,8 @@ $bright-blue: #0068ac;
 $link-primary: #0071BD;
 $link-primary-hover: black;
 
+$brand-danger: #b31b1b;
+
 // -------------------
 // Boostrap overrides
 // -------------------
